<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="45px"
    android:gravity="center"
    android:text="@string/change_password_hint"/>


    <EditText
        android:id="@+id/change_current_psw_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_bg_shape"
        android:hint="@string/enter_pas_hint"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/change_new_psw_et"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_bg_shape"
        android:hint="@string/new_pas_hint"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:inputType="textPassword"

        />
    <EditText
        android:id="@+id/change_confirm_new_psw_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_bg_shape"
        android:hint="@string/cof_new_pas_hint"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:inputType="textPassword"

        />

<Button
    android:id="@+id/change_change_bt"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/btn_green_bg_shape"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="150dp"
    android:text="@string/change_pas_bt"
    android:textColor="@android:color/white"
    android:textSize="48px"
    android:textAllCaps="false"
    />
</LinearLayout>
