<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/mainNavigationColor"
    >
    <TextView
        android:id="@+id/navigation_family_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/navigation_family_tv"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:paddingTop="15dp"
        android:clickable="true"
        android:drawableTop="@mipmap/main_family"/>
    <TextView
        android:id="@+id/navigation_race_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/navigation_race_tv"
        android:paddingTop="15dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:clickable="true"
        android:drawableTop="@mipmap/main_race"/>
    <TextView
        android:id="@+id/navigation_leaderboard_tv"

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/navigation_leaderboard_tv"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:paddingTop="15dp"
        android:clickable="true"
        android:drawableTop="@mipmap/main_leaderbpard"/>
    <TextView
        android:id="@+id/navigation_settings_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/navigation_settings_tv"
        android:paddingTop="15dp"
        android:gravity="center"
        android:clickable="true"
        android:textColor="@color/colorWhite"
        android:drawableTop="@mipmap/main_settings"/>
</LinearLayout>
