<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="55dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_auto_sync_bt"
        android:textColor="@color/colorBlack"
        android:layout_centerVertical="true"
        android:textSize="38px"
        android:layout_marginLeft="30dp"/>
<ToggleButton
    android:id="@+id/setting_sync_tbt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_alignParentRight="true"
    android:layout_marginRight="30dp"
    android:background="@drawable/settings_btn_seletor"
    android:textOff=" "
    android:textOn=" "
    android:layout_marginTop="10dp"
    />
</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"></View>

    <TextView
        android:id="@+id/setting_inactivity_tv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/setting_inactivity_tv"
        android:textColor="@color/colorBlack"
        android:textSize="38px"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
         />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"></View>
    <TextView
        android:id="@+id/setting_sleep_tv"

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/setting_preset_sleep_tv"
        android:textColor="@color/colorBlack"
        android:textSize="38px"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"></View>
    <TextView
        android:id="@+id/setting_time_tv"

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/setting_time_format_tv"
        android:textColor="@color/colorBlack"
        android:textSize="38px"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"></View>
    <TextView
        android:id="@+id/setting_untils_tv"

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/setting_untils_tv"
        android:textColor="@color/colorBlack"
        android:textSize="38px"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"></View>
    <TextView
        android:id="@+id/setting_vibration_tv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/setting_vibration_tv"
        android:textColor="@color/colorBlack"
        android:textSize="38px"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"></View>
    <TextView
        android:id="@+id/setting_reset_tv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/setting_reset_tv"
        android:textColor="@color/colorBlack"
        android:textSize="38px"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"/>

</LinearLayout>
